--- a/app/src/main/res/layout/stock_row.xml
+++ b/app/src/main/res/layout/stock_row.xml
@@ -4,9 +4,17 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/stock_row"
+        android:id="@+id/stock_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:textAlignment="viewStart"/>
+
+    <TextView
+        android:id="@+id/holdings_value"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="24sp"
+        android:textAlignment="textEnd"/>
 
 </LinearLayout>
