--- a/app/src/main/res/layout/activity_stocks.xml
+++ b/app/src/main/res/layout/activity_stocks.xml
@@ -5,15 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="#263238"
     tools:context=".StocksActivity">
 
     <SearchView
         android:id="@+id/stock_search_bar"
+        android:textColor="#FFFFFF"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <ListView
         android:id="@+id/stock_list"
         android:layout_width="match_parent"
+        android:textColor="#FFFFFF"
         android:layout_height="match_parent" />
 </LinearLayout>
