--- a/app/src/main/res/layout/activity_trade.xml
+++ b/app/src/main/res/layout/activity_trade.xml
@@ -14,15 +14,17 @@
         android:layout_marginTop="16dp"
         android:layout_weight="1"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/trade_frame"/>
 
     <FrameLayout
         android:id="@+id/trade_frame"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        app:layout_constraintBottom_toBottomOf="@id/results_list_view"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/results_list_view"
+        app:layout_constraintBottom_toBottomOf="parent">
 
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
