--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -130,6 +130,20 @@
         app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_43_pm" />
 
+    <TextView
+        android:id="@+id/main_greeting"
+        android:layout_width="wrap_content"
+        android:layout_height="85dp"
+        android:layout_marginStart="45dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="45dp"
+        android:text="@string/main_hello"
+        android:textAlignment="center"
+        android:textSize="30sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+
 
     <!--    <ImageView-->
     <!--        android:id="@+id/imageView"-->
