--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -170,6 +170,16 @@
         app:layout_constraintStart_toEndOf="@+id/hvy_stock_heading"
         app:layout_constraintTop_toBottomOf="@+id/main_greeting" />
 
+    <WebView
+        android:id="@+id/wwStockNews"
+        android:layout_width="410dp"
+        android:layout_height="209dp"
+        android:layout_marginBottom="60dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <!--    <ImageView-->
     <!--        android:id="@+id/imageView"-->
