--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#263238"
+    android:background="#000000"
 
     android:orientation="horizontal"
     tools:context=".MainActivity">
@@ -50,19 +50,20 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="228dp"
-        android:layout_height="220dp"
+        android:layout_width="151dp"
+        android:layout_height="163dp"
         android:layout_marginStart="88dp"
         android:layout_marginTop="51dp"
         android:layout_marginEnd="95dp"
         android:layout_marginBottom="460dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/_2457288_removebg_preview_copy_1" />
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/_2457288_removebg_preview_copy_1"
+        android:contentDescription="TODO" />
 
     <ImageButton
         android:id="@+id/question_mark"
@@ -72,75 +73,86 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@android:drawable/ic_menu_help" />
+        app:srcCompat="@android:drawable/ic_menu_help"
+        android:contentDescription="TODO" />
 
 
     <ImageButton
         android:id="@+id/homeButton"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
+        android:layout_width="101.5dp"
+        android:layout_height="46dp"
+        android:layout_marginStart="202dp"
+        android:layout_marginTop="685dp"
+        android:layout_marginEnd="108dp"
         android:padding="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/settingsButton"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/stockButton"
-        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_16_24_pm" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_16_24_pm"
+        android:contentDescription="TODO" />
 
     <ImageButton
         android:id="@+id/settingsButton"
-        android:layout_width="101.5dp"
-        android:layout_height="45dp"
+        android:layout_width="113dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="303dp"
         android:layout_marginTop="685dp"
-        android:layout_marginEnd="4dp"
         android:padding="0dp"
         android:scaleType="centerCrop"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_11_pm" />
+        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_11_pm"
+        android:contentDescription="TODO" />
 
     <ImageButton
         android:id="@+id/stockButton"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
+        android:layout_width="101.5dp"
+        android:layout_height="46dp"
         android:layout_marginTop="685dp"
         android:layout_marginBottom="1dp"
         android:padding="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.34"
+        app:layout_constraintHorizontal_bias="0.325"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_38_pm" />
+        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_38_pm"
+        android:contentDescription="TODO" />
 
     <ImageButton
         android:id="@+id/learningButton"
-        android:layout_width="100dp"
-        android:layout_height="45dp"
-        android:layout_marginStart="4dp"
+        android:layout_width="101.5dp"
+        android:layout_height="46dp"
         android:layout_marginTop="685dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginEnd="310dp"
         android:padding="0dp"
         android:scaleType="centerCrop"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_43_pm" />
+        app:srcCompat="@drawable/screen_shot_2020_11_24_at_4_15_43_pm"
+        android:contentDescription="TODO" />
 
     <TextView
         android:id="@+id/main_greeting"
         android:layout_width="wrap_content"
         android:layout_height="85dp"
         android:layout_marginStart="45dp"
-        android:layout_marginTop="19dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="45dp"
         android:text="@string/main_hello"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -149,13 +161,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="150dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="220dp"
         android:text="@string/main_hvy_app"
         android:textAlignment="center"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.668"
+        app:layout_constraintHorizontal_bias="0.736"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/main_greeting" />
 
@@ -163,9 +176,10 @@
         android:id="@+id/main_acc_bal"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="4dp"
         android:textAlignment="viewStart"
+        android:textColor="#FFFFFF"
         android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/hvy_stock_heading"
         app:layout_constraintTop_toBottomOf="@+id/main_greeting" />
