--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -42,6 +42,7 @@
         android:layout_marginStart="57dp"
         android:layout_marginTop="192dp"
         android:layout_marginEnd="57dp"
+        android:password="true"
         android:textColor="#FF5722"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
